--- a/frameworks/mocha-assert/package.json
+++ b/frameworks/mocha-assert/package.json
@@ -1,14 +1,8 @@
 {
   "name": "mocha-assert",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha mocha.test.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "mocha": "^8.2.1"
   },
