--- a/frameworks/uvu/package.json
+++ b/frameworks/uvu/package.json
@@ -7,7 +7,7 @@
     "uvu": "0.5.0-next.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "uvu"
   },
   "type": "module",
   "keywords": [],
